# air-quality-monitor

./: .gitignore  CMakeLists.txt  README.en.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: release-on-tag.yml  tag-from-version.yml
components/air_quality/: CMakeLists.txt  air_quality.c  air_quality_aqi.c  air_quality_internal.h  air_quality_labels.c  air_quality_particle.c  air_quality_rain.c
components/air_quality/include/: air_quality.h
components/device_state_json/: CMakeLists.txt  device_state_json.c
components/device_state_json/include/: device_state_json.h
components/mqtt_ha/: CMakeLists.txt  mqtt_ha.c
components/mqtt_ha/include/: mqtt_ha.h
components/ota_manager/: CMakeLists.txt  ota_manager.c  ota_manager_github.c  ota_manager_internal.h  ota_manager_upload.c
components/ota_manager/include/: ota_manager.h
components/platform/: CMakeLists.txt  Kconfig  platform_config.c  platform_wifi.c
components/platform/include/: device_types.h  platform_config.h  platform_wifi.h
components/provisioning_web/: CMakeLists.txt  gzip_asset.py  index.html  provisioning_web.c
components/provisioning_web/include/: provisioning_web.h
components/provisioning_web/web/: app.css  app.js  index.html  index_debug.html
components/sensors/: CMakeLists.txt  bmp390.c  pms7003.c  scd41.c  sensors.c  sensors_internal.h  sensors_persistence.c  sensors_trend.c  sgp41.c  sps30.c
components/sensors/include/: bmp390.h  pms7003.h  scd41.h  sensors.h  sgp41.h  sps30.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  led_strip_encoder.c  led_strip_encoder.h  status_led.c  status_led.h
scripts/: get-next-release-version.sh  get-project-version.sh  set-project-version.sh
tools/: check_local.sh  idf_clang_check.sh
